--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
      <!-- Navbar-->
      <div class="navbar" id="topnav">
        <a class="aktivside" href="index.html">Hjem</a>
-       <a href="Principia.html">Principia Mathematica</a>
+       <a href="principia.html">Principia Mathematica</a>
        <a href="Komplekse.html">Komplekse tall</a>
-       <a href="Taylor.html">Taylorrekker</a>
-       <a href="Imponerelærer.html">Tips</a>
+       <a href="taylor.html">Taylorrekker</a>
+       <a href="tips.html">Tips</a>
        <a href="memes.html">Memes</a>
        <div class="dropned">
          <a class="dropbtn">Kontakt <i class="fa fa-caret-down"></i></a>
@@ -57,7 +57,8 @@
        </div>
        <a href="#" class="icon" onclick="myFunction()">
        <i class="fa fa-bars"></i>
-  </a>
+     </a>
+     </div>
      </div>
     <div id="hoved">
     </div>
