--- a/tips.html
+++ b/tips.html
@@ -3,14 +3,13 @@
 <head>
 <title>Mathedemo</title>
 <!-- LATEX import -->
-    <script type="text/x-mathjax-config">
+  <script type="text/x-mathjax-config">
     MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
-    </script>
-    <script type="text/javascript"
+  </script>
+  <script type="text/javascript"
     src="http://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
-    </script>
+  </script>
 <link rel="stylesheet" href="./Navigering.css">
-<link rel="stylesheet" href="./memes.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
@@ -21,8 +20,8 @@
    <a href="principia.html">Principia Mathematica</a>
    <a href="Komplekse.html">Komplekse tall</a>
    <a href="taylor.html">Taylorrekker</a>
-   <a href="tips.html">Tips</a>
-   <a class="aktivside" href="memes.html">Memes</a>
+   <a class="aktivside" href="tips.html">Tips</a>
+   <a href="memes.html">Memes</a>
    <div class="dropned">
      <a class="dropbtn">Kontakt <i class="fa fa-caret-down"></i></a>
      <div class="innhold">
@@ -38,33 +37,25 @@
    <i class="fa fa-bars"></i>
  </a>
  </div>
-  <!-- Slideshow container -->
-<div class="slideshow-container">
-
-    <!-- Full-width images with number and caption text -->
-    <div class="mySlides fade">
-      <img src="./Bilder/IMG_2932.png" style="width:100%">
-    </div>
-
-    <div class="mySlides fade">
-      <img src="./Bilder/Fermat.png" style="width:100%">
-    </div>
-
-    <div class="mySlides fade">
-      <img src="./Bilder/Ramanujan.png" style="width:100%">
-    </div>
-
-    <div class="mySlides fade">
-        <img src="./Bilder/Lhop.png" style="width:100%">
-      </div>
-
+  <div>
+    <iframe src="https://www.wolframalpha.com/" height="1000px" width="1000px"></iframe>
   </div>
-  <br>
+  <div>
+    <iframe src="https://detexify.kirelabs.org/classify.html" height="300px" width="300px"></iframe>
+  </div>
   <!-- Infobar -->
   <div class="infobar">
     Creator: Daniel Løfwander
   </div>
-  <script src="memes.js"></script>
-  <script src="hamburger.js" charset="utf-8"></script>
+
+  <!-- plan
+    lhopital
+    qed
+    uløselig?
+    taylorrekker
+    bevisteknikker
+    navn for variabler
+   -->
+   <script src="hamburger.js" charset="utf-8"></script>
 </body>
 </html>
