--- a/Komplekse.html
+++ b/Komplekse.html
@@ -12,25 +12,37 @@
     src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
   </script>
 <link rel="stylesheet" href="./Navigering.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
  <!-- Navbar-->
- <div class="navbar">
-    <a href="index.html">Hjem</a>
-    <a href="Principia.html">Principia Mathematica</a>
-    <a class="aktivside" href="Komplekse.html">Komplekse tall</a>
-    <a href="Taylor.html">Taylorrekker</a>
-    <a href="Imponerelærer.html">Tips</a>
-    <a href="memes.html">Memes</a>
-    <a id="git" href="https://github.com/Danajax" target="_blank">
-      <img src="./Bilder/GitHub-Mark-Light-32px.png">
-  </a>
-  </div>
+ <div class="navbar" id="topnav">
+   <a href="index.html">Hjem</a>
+   <a href="principia.html">Principia Mathematica</a>
+   <a class="aktivside" href="Komplekse.html">Komplekse tall</a>
+   <a href="taylor.html">Taylorrekker</a>
+   <a href="tips.html">Tips</a>
+   <a href="memes.html">Memes</a>
+   <div class="dropned">
+     <a class="dropbtn">Kontakt <i class="fa fa-caret-down"></i></a>
+     <div class="innhold">
+      <a href="https://github.com/Danajax" class="github" target="_blank"><i class="fa fa-github"></i></a>
+      <a href="https://discord.gg/homework" class="reddit" target="_blank"><i class="fa fa-reddit"></i></a>
+      <a href="https://discord.gg/homework" class="stackexchange" target="_blank"><i class="fa fa-stack-exchange"></i></a>
+      <a href="https://discord.gg/homework" class="stackoverflow" target="_blank"><i class="fa fa-stack-overflow"></i></a>
+      <a href="https://discord.gg/homework" class="steam" target="_blank"><i class="fa fa-steam"></i></a>
+      <a href="https://discord.gg/homework" class="mail" target="_blank"><i class="fa fa-envelope"></i></a>
+     </div>
+   </div>
+   <a href="#" class="icon" onclick="myFunction()">
+   <i class="fa fa-bars"></i>
+ </a>
+ </div>
 
   <div class="main">
     <div class="overskrift">
-      <h3>Nå har du endelig trykket deg inn på komplekse tall og jeg kan fortelle deg at disse tallene lar deg gjøre noe helt unikt! Negative kvadratrøtter, logaritmer og du blir introdusert til noe helt nytt! Nemlig: $i^2 = -1$, et "tall" som har egenskapet til å være et negativt kvadrat, fascinerende hva? Vi kommer ikke til å gå i dybden på kompleks analyse, men kommer til å forklare de mest fundamentale prinsippene. </h3>
+      <p>Nå har du endelig trykket deg inn på komplekse tall og jeg kan fortelle deg at disse tallene lar deg gjøre noe helt unikt! Negative kvadratrøtter, logaritmer og du blir introdusert til noe helt nytt! Nemlig: $i^2 = -1$, et "tall" som har egenskapet til å være et negativt kvadrat, fascinerende hva? Vi kommer ikke til å gå i dybden på kompleks analyse, men kommer til å forklare de mest fundamentale prinsippene. </p>
     </div>
     <div class="informasjon">
       <h3>Hva er komplekse tall?</h3>
@@ -38,7 +50,7 @@
       <p>Vel, vi kjenner til reelle tall som alle tall på tallinjen og vi kan uttryke denne tallinjen som x-aksen. De komplekse tallene utfører andreaksen og vi får dermed et to-dimensjonalt koordinatsystem. Mengden komplekse tall kan uttrykkes på følgende måte $$\mathbb{C} = \left \{ a + ib \hspace{5px} | \hspace{5px} a, b \in \mathbb{R}, i^2 = -1 \right \} $$ Denne formen kalles <i>kartesisk koordinatform</i>, hvor man omtaler $a$ som <i>realdelen</i> og $ib$ som <i>imaginærdelen</i>. Med denne kunnskapen kan et eksempel på et komplekst tall $z$ være $z = 2 + 2i$. Men så oppdager en kjent matematiker, selveste <a href="https://snl.no/Leonhard_Euler">Leonard Euler</a> noe unikt.</p>
       <h3>Hva oppdager Euler?</h3>
       <p>$$e^{i\pi} + 1 = 0$$
-      Dette er Eulers identitet og blir ofte beundret av mange. Men hvordan kom vi hit? Vi ser at $e^{i\pi}$ ikke er på kartesisk koordinatform, derfor må vi lære <i>polar koordinatform</i>. $z = r (\cos(\theta) + i\sin(\theta))$, der $r = |z| = \sqrt{(a^2+b^2)}$ er <i>modulus</i> og $\theta$ er $argumentet$ (Arg). Argumentet finner vi gjennom følgende $\sin \theta = \frac{b}{r}$ og $\cos \theta = \frac{a}{r}$. Vi følger eksempelet og gjør om $z$ fra kartesisk til polarform. $$z = 2 + 2i $$ $$r = \sqrt{2^2+2^2} = 2\sqrt{2}$$ $$\cos \theta = \frac{2}{2\sqrt{2}} = \frac{\pi}{4}$$ $$\sin \theta = \frac{2}{2\sqrt{2}} = \frac{\pi}{4}$$ $$z = 2\sqrt{2} \left (\cos \frac{\pi}{4} + i \sin \frac{\pi}{4}\right ) \hspace{10px} \square $$ </p>
+      Dette er Eulers identitet og blir ofte beundret av mange. Men hvordan kom vi hit? Vi ser at $e^{i\pi}$ ikke er på kartesisk koordinatform, derfor må vi lære <i>polar koordinatform</i>. $z = r (\cos(\theta) + i\sin(\theta))$, der $r = |z| = \sqrt{(a^2+b^2)}$ er <i>modulus</i> og $\theta$ er $argumentet$ (Arg). Argumentet finner vi gjennom følgende $\sin \theta = \frac{b}{r}$ og $\cos \theta = \frac{a}{r}$. Vi følger eksempelet og gjør om $z$ fra kartesisk til polarform. $$z = 2 + 2i $$ $$r = \sqrt{2^2+2^2} = 2\sqrt{2}$$ $$\arccos \theta = \frac{2}{2\sqrt{2}} = \frac{\pi}{4}$$ $$\arcsin \theta = \frac{2}{2\sqrt{2}} = \frac{\pi}{4}$$ $$z = 2\sqrt{2} \left (\cos \frac{\pi}{4} + i \sin \frac{\pi}{4}\right ) \hspace{10px} \square $$ </p>
       <p>Nå tenker du kanskje at vi er på villspor men, det var her Euler oppdaget følgende formel $$re^{i\theta} = r(\cos \theta + i \sin \theta)$$
       Da kan Euler sin identitet grovt bevises og er en oppgave til leseren. Men så oppdager <a href="https://mathshistory.st-andrews.ac.uk/Biographies/De_Moivre/">Abraham de Moivre</a> et gunstig korollar. Nemlig at $$re^{in\theta} = r(\cos n\theta + i \sin n\theta)$$ Etter dette har du nå veldig grunnlegende kunnskaper om komplekse tall, men dette er nok til å finne negativ logaritmer og negative røtter</p>
       <h3>Negativ partalls-rot?</h3>
@@ -56,7 +68,7 @@
       <div id="fraktal">
         <div>
         <h3>Fraktaler</h3>
-        <p>Først og fremst, finnes det ikke en god definisjon på hva en fraktal er. Man kan prøve å sette ord på det ved å si at fraktaler er tallfølger som har et utganspunkt og utvikler seg videre gjennom en algoritme. En av de mest kjente fraktalene er den avbildet som ble funnet av <a href="https://en.wikipedia.org/wiki/Benoit_Mandelbrot">Benoit Mandelbrot</a> og er kalt for Mandelbrot mengden</p>
+        <p>Først og fremst, finnes det ikke en god definisjon på hva en fraktal er. Man kan prøve å sette ord på det ved å si at fraktaler er tallfølger som har et utganspunkt og utvikler seg videre gjennom en algoritme. En av de mest kjente fraktalene er avbildet og ble oppdaget av <a href="https://en.wikipedia.org/wiki/Benoit_Mandelbrot">Benoit Mandelbrot</a> som nå har sitt navn Mandelbrot mengden $\mathbb{M}$. Mandelbrotmengden er en rekursiv følge av komplekse tall der $z_0 = 0$ og $z_{n+1} = z_n^2 + c$.</p>
         </div>
         <div>
           <img id="bilde2" src="Bilder/fractal-gf54d306f5_640.jpeg" alt="bilde av mandelbrot set">
@@ -74,5 +86,6 @@
   <div class="infobar">
     Creator: Daniel Løfwander
   </div>
+  <script src="hamburger.js" charset="utf-8"></script>
 </body>
 </html>
