--- a/Komplekse.html
+++ b/Komplekse.html
@@ -52,7 +52,10 @@
       <p>$$e^{i\pi} + 1 = 0$$
       Dette er Eulers identitet og blir ofte beundret av mange. Men hvordan kom vi hit? Vi ser at $e^{i\pi}$ ikke er på kartesisk koordinatform, derfor må vi lære <i>polar koordinatform</i>. $z = r (\cos(\theta) + i\sin(\theta))$, der $r = |z| = \sqrt{(a^2+b^2)}$ er <i>modulus</i> og $\theta$ er $argumentet$ (Arg). Argumentet finner vi gjennom følgende $\sin \theta = \frac{b}{r}$ og $\cos \theta = \frac{a}{r}$. Vi følger eksempelet og gjør om $z$ fra kartesisk til polarform. $$z = 2 + 2i $$ $$r = \sqrt{2^2+2^2} = 2\sqrt{2}$$ $$\arccos \theta = \frac{2}{2\sqrt{2}} = \frac{\pi}{4}$$ $$\arcsin \theta = \frac{2}{2\sqrt{2}} = \frac{\pi}{4}$$ $$z = 2\sqrt{2} \left (\cos \frac{\pi}{4} + i \sin \frac{\pi}{4}\right ) \hspace{10px} \square $$ </p>
       <p>Nå tenker du kanskje at vi er på villspor men, det var her Euler oppdaget følgende formel $$re^{i\theta} = r(\cos \theta + i \sin \theta)$$
-      Da kan Euler sin identitet grovt bevises og er en oppgave til leseren. Men så oppdager <a href="https://mathshistory.st-andrews.ac.uk/Biographies/De_Moivre/">Abraham de Moivre</a> et gunstig korollar. Nemlig at $$re^{in\theta} = r(\cos n\theta + i \sin n\theta)$$ Etter dette har du nå veldig grunnlegende kunnskaper om komplekse tall, men dette er nok til å finne negativ logaritmer og negative røtter</p>
+      Da kan Euler sin identitet grovt bevises og er en oppgave til leseren. Men så oppdager <a href="https://mathshistory.st-andrews.ac.uk/Biographies/De_Moivre/">Abraham de Moivre</a> et gunstig korollar. Nemlig at $$re^{in\theta} = r(\cos n\theta + i \sin n\theta)$$ Etter dette har du nå veldig grunnlegende kunnskaper om komplekse tall, men dette er nok til å finne negativ logaritmer og negative røtter. </p>
+      <input id="a" placeholder="Skriv inn a">
+      <input id="b" placeholder="Skriv inn b">
+      <button id="knapp" onclick="fn1()">Polarform</button>
       <h3>Negativ partalls-rot?</h3>
       $$\sqrt{-64}$$
       <p>Er et veldig grunnlegende eksempel, og er noe vi kan løse med komplekse tall $$=\sqrt{64i^2} = 8i \hspace{10px}\square$$ En n-te rot har opp mot n-løsninger som er komplekse. For eksempel ville mange svart at $\sqrt[3]{1} = 1$, men det eksisterer faktisk 3 løsninger. For å dykke inn i disse er det lurt å ha studert <i>algebraens fundamentalteorem</i></p>
@@ -87,5 +90,6 @@
     Creator: Daniel Løfwander
   </div>
   <script src="hamburger.js" charset="utf-8"></script>
+  <script src="complex.js" charset="utf-8"></script>
 </body>
 </html>
