--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <div>_</div>
     <!-- Infobar -->
     <div class="infobar">
-    <a href="https://github.com/Danajax" class="github" target="_blank"><i class="fa fa-github"></i></a>
+    <a href="https://github.com/Danajax" class="github" target="_blank"><i class="fa fa-instagram"></i></a>
     <a href="https://discord.gg/homework" class="reddit" target="_blank"><i class="fa fa-reddit"></i></a>
     <a href="https://discord.gg/homework" class="stackexchange" target="_blank"><i class="fa fa-stack-exchange"></i></a>
     <a href="https://discord.gg/homework" class="stackoverflow" target="_blank"><i class="fa fa-stack-overflow"></i></a>
