--- a/Principia.html
+++ b/Principia.html
@@ -11,14 +11,6 @@
     </script>
 <link rel="stylesheet" href="./Navigering.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>
-#informasjon1 {
-    background-color: lightblue;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-    grid-template-rows: repeat(auto-fit,1fr);
-}
-</style>
 </head>
 
 <body>
@@ -26,28 +18,16 @@
  <div class="navbar" id="topnav">
    <a href="index.html">Hjem</a>
    <a class="aktivside" href="principia.html">Principia Mathematica</a>
-   <a href="Komplekse.html">Komplekse tall</a>
+   <a href="komplekse.html">Komplekse tall</a>
    <a href="taylor.html">Taylorrekker</a>
-   <a href="tips.html">Tips</a>
    <a href="memes.html">Memes</a>
-   <div class="dropned">
-     <a class="dropbtn">Kontakt <i class="fa fa-caret-down"></i></a>
-     <div class="innhold">
-      <a href="https://github.com/Danajax" class="github" target="_blank"><i class="fa fa-github"></i></a>
-      <a href="https://discord.gg/homework" class="reddit" target="_blank"><i class="fa fa-reddit"></i></a>
-      <a href="https://discord.gg/homework" class="stackexchange" target="_blank"><i class="fa fa-stack-exchange"></i></a>
-      <a href="https://discord.gg/homework" class="stackoverflow" target="_blank"><i class="fa fa-stack-overflow"></i></a>
-      <a href="https://discord.gg/homework" class="steam" target="_blank"><i class="fa fa-steam"></i></a>
-      <a href="https://discord.gg/homework" class="mail" target="_blank"><i class="fa fa-envelope"></i></a>
-     </div>
-   </div>
-   <a href="#" class="icon" onclick="myFunction()">
+   <a class="icon" onclick="myFunction()">
    <i class="fa fa-bars"></i>
  </a>
  </div>
     <div class="main">
       <div class="overskrift">
-      <h3>Har du noen gang utfordret matematikkens mest fundamentale prinsipp? Hvordan har man kommet frem til at $1+1=2$? Gjennom sunn fornuft kan vi jo forestille oss at dette er sant. Forestill deg at du har $1$ eple og din venn har $1$ eple, da er det naturlig at dere til sammen har 2 epler, og slik fortsetter det med alle naturlige tall. Men hva om jeg forteller deg at $1+1 = 1$ også er sant, kanskje dette vekker din interesse?</h3>
+      <h3>Har du noen gang utfordret matematikkens mest fundamentale prinsipp? Hvordan har man kommet frem til at $1+1=2$? Gjennom sunn fornuft kan vi jo forestille oss at dette er sant. Forestill deg at du har $1$ eple og din venn har $1$ eple, da er det naturlig at dere til sammen har $2$ epler, og slik fortsetter det med alle naturlige tall. Men hva om jeg forteller deg at $1+1 = 1$ også er sant, kanskje dette vekker din interesse?</h3>
       </div>
   <div id="informasjon1">
       <div><h3>Hva er Principia Mathematica?</h3>
