--- a/index.html
+++ b/index.html
@@ -42,25 +42,13 @@
        <a href="principia.html">Principia Mathematica</a>
        <a href="Komplekse.html">Komplekse tall</a>
        <a href="taylor.html">Taylorrekker</a>
-       <a href="tips.html">Tips</a>
        <a href="memes.html">Memes</a>
-       <div class="dropned">
-         <a class="dropbtn">Kontakt <i class="fa fa-caret-down"></i></a>
-         <div class="innhold">
-          <a href="https://github.com/Danajax" class="github" target="_blank"><i class="fa fa-github"></i></a>
-          <a href="https://discord.gg/homework" class="reddit" target="_blank"><i class="fa fa-reddit"></i></a>
-          <a href="https://discord.gg/homework" class="stackexchange" target="_blank"><i class="fa fa-stack-exchange"></i></a>
-          <a href="https://discord.gg/homework" class="stackoverflow" target="_blank"><i class="fa fa-stack-overflow"></i></a>
-          <a href="https://discord.gg/homework" class="steam" target="_blank"><i class="fa fa-steam"></i></a>
-          <a href="https://discord.gg/homework" class="mail" target="_blank"><i class="fa fa-envelope"></i></a>
-         </div>
-       </div>
        <a href="#" class="icon" onclick="myFunction()">
        <i class="fa fa-bars"></i>
      </a>
      </div>
-     </div>
     <div id="hoved">
+      <h3>Har du alltid ønsket å lære deg om hvorfor 1 + 1 = 2 er sant, om det virkelig eksisterer en negativ kvadratrot eller logaritme, rekker for kjente trig-identiteter, effektive måter å angripe grenseverdier eller rett og slett ønsker å imponere læreren? Da har du kommet til riktig sted!!</h3>
     </div>
     <div id="tekst1">
     <h3>Har du alltid ønsket å lære deg om hvorfor 1 + 1 = 2 er sant, om det virkelig eksisterer en negativ kvadratrot eller logaritme, rekker for kjente trig-identiteter, effektive måter å angripe grenseverdier eller rett og slett ønsker å imponere læreren? Da har du kommet til riktig sted!!</h3>
@@ -68,12 +56,12 @@
     <div>_</div>
     <!-- Infobar -->
     <div class="infobar">
-    <a href="https://github.com/Danajax" class="github" target="_blank"><i class="fa fa-instagram"></i></a>
-    <a href="https://discord.gg/homework" class="reddit" target="_blank"><i class="fa fa-reddit"></i></a>
-    <a href="https://discord.gg/homework" class="stackexchange" target="_blank"><i class="fa fa-stack-exchange"></i></a>
-    <a href="https://discord.gg/homework" class="stackoverflow" target="_blank"><i class="fa fa-stack-overflow"></i></a>
-    <a href="https://discord.gg/homework" class="steam" target="_blank"><i class="fa fa-steam"></i></a>
-    <a href="https://discord.gg/homework" class="mail" target="_blank"><i class="fa fa-envelope"></i></a>
+    <a href="https://github.com/Danajax" class="github" target="_blank"><i class="fa fa-github"></i></a>
+    <a href="https://www.coinbase.com/price/bitcoin" class="btc" target="_blank"><i class="fa fa-btc"></i></a>
+    <a href="https://www.reddit.com/" class="reddit" target="_blank"><i class="fa fa-reddit"></i></a>
+    <a href="https://stackexchange.com/" class="stackexchange" target="_blank"><i class="fa fa-stack-exchange"></i></a>
+    <a href="https://stackoverflow.com/" class="stackoverflow" target="_blank"><i class="fa fa-stack-overflow"></i></a>
+    <a href="https://store.steampowered.com/about/" class="steam" target="_blank"><i class="fa fa-steam"></i></a>
     </div>
     <script src="hamburger.js" charset="utf-8"></script>
 </body>
