--- a/memes.html
+++ b/memes.html
@@ -19,22 +19,10 @@
  <div class="navbar" id="topnav">
    <a href="index.html">Hjem</a>
    <a href="principia.html">Principia Mathematica</a>
-   <a href="Komplekse.html">Komplekse tall</a>
+   <a href="komplekse.html">Komplekse tall</a>
    <a href="taylor.html">Taylorrekker</a>
-   <a href="tips.html">Tips</a>
    <a class="aktivside" href="memes.html">Memes</a>
-   <div class="dropned">
-     <a class="dropbtn">Kontakt <i class="fa fa-caret-down"></i></a>
-     <div class="innhold">
-      <a href="https://github.com/Danajax" class="github" target="_blank"><i class="fa fa-github"></i></a>
-      <a href="https://discord.gg/homework" class="reddit" target="_blank"><i class="fa fa-reddit"></i></a>
-      <a href="https://discord.gg/homework" class="stackexchange" target="_blank"><i class="fa fa-stack-exchange"></i></a>
-      <a href="https://discord.gg/homework" class="stackoverflow" target="_blank"><i class="fa fa-stack-overflow"></i></a>
-      <a href="https://discord.gg/homework" class="steam" target="_blank"><i class="fa fa-steam"></i></a>
-      <a href="https://discord.gg/homework" class="mail" target="_blank"><i class="fa fa-envelope"></i></a>
-     </div>
-   </div>
-   <a href="#" class="icon" onclick="myFunction()">
+   <a class="icon" onclick="myFunction()">
    <i class="fa fa-bars"></i>
  </a>
  </div>
