--- a/Komplekse.html
+++ b/Komplekse.html
@@ -35,7 +35,7 @@
     </div>
     <div class="informasjon">
       <h3>Hva er komplekse tall?</h3>
-      $$\mathbb{N} \subset \mathbb{Z} \subset \mathbb{Q} \subset \mathbb{R} \subset \mathbb{C} \subset \mathbb{H} \subset \mathbb{O} \subset \mathbb{S} $$
+      $$\mathbb{N} \subset \mathbb{Z} \subset \mathbb{Q} \subset \mathbb{R} $$$$\subset \mathbb{C} \subset \mathbb{H} \subset \mathbb{O} \subset \mathbb{S} $$
       <p>Vel, vi kjenner til reelle tall som alle tall på tallinjen og vi kan uttryke denne tallinjen som x-aksen. De komplekse tallene utfører andreaksen og vi får dermed et to-dimensjonalt koordinatsystem. Mengden komplekse tall kan uttrykkes på følgende måte $$\mathbb{C} = \left \{ a + ib \hspace{5px} | \hspace{5px} a, b \in \mathbb{R}, i^2 = -1 \right \} $$ Denne formen kalles <i>kartesisk koordinatform</i>, hvor man omtaler $a$ som <i>realdelen</i> og $ib$ som <i>imaginærdelen</i>. Med denne kunnskapen kan et eksempel på et komplekst tall $z$ være $z = 2 + 2i$. Men så oppdager en kjent matematiker, selveste <a href="https://snl.no/Leonhard_Euler">Leonard Euler</a> noe unikt.</p>
       <h3>Hva oppdager Euler?</h3>
       <p>$$e^{i\pi} + 1 = 0$$
@@ -54,23 +54,13 @@
       $$\cos(ix) = \cosh(x)$$
       $$\sin(ix) = \sinh(x)$$
       $$\tan(ix) = \tanh(x)$$
-      Vi kan også uttrykke $\sin$ og $\cos$ på følgende måte $$\cos(z) = \frac{e^{iz} + e^{-iz}}{2} \hspace{20px} \sin(z) = \frac{e^{iz}-e^{-iz}}{2i}$$ Da er det også vel å merke at $$\cos^2z + \sin ^2 z = 1, \hspace{5px} \forall z \in \mathbb{C} $$ og beviset kan gjøres som trening for leseren.</p>
-      <div id="fraktal">
-        <div>
-        <h3>Fraktaler</h3>
-        <p>Først og fremst, finnes det ikke en god definisjon på hva en fraktal er. Man kan prøve å sette ord på det ved å si at fraktaler er tallfølger som har et utganspunkt og utvikler seg videre gjennom en algoritme. En av de mest kjente fraktalene er avbildet og ble oppdaget av <a href="https://en.wikipedia.org/wiki/Benoit_Mandelbrot">Benoit Mandelbrot</a> som nå har sitt navn Mandelbrot mengden $\mathbb{M}$. Mandelbrotmengden er en rekursiv følge av komplekse tall der $z_0 = 0$ og $z_{n+1} = z_n^2 + c$.</p>
-        </div>
-        <div>
-          <img id="bilde2" src="Bilder/fractal-gf54d306f5_640.jpeg" alt="bilde av mandelbrot set">
-        </div>
-        </div>
-      </div>
+      Vi kan også uttrykke $\sin$ og $\cos$ på følgende måte $$\cos(z) = \frac{e^{iz} + e^{-iz}}{2}$$$$ \sin(z) = \frac{e^{iz}-e^{-iz}}{2i}$$ Da er det også vel å merke at $$\cos^2z + \sin ^2 z = 1, \hspace{5px} \forall z \in \mathbb{C} $$ og beviset kan gjøres som trening for leseren.</p>
+      <h3>Fraktaler</h3>
+      <p>Først og fremst, finnes det ikke en god definisjon på hva en fraktal er. Man kan prøve å sette ord på det ved å si at fraktaler er tallfølger som har et utganspunkt og utvikler seg videre gjennom en algoritme. En av de mest kjente fraktalene ble oppdaget av <a href="https://en.wikipedia.org/wiki/Benoit_Mandelbrot">Benoit Mandelbrot</a> som nå har sitt navn Mandelbrot mengden $\mathbb{M}$. Mandelbrotmengden er en rekursiv følge av komplekse tall der $z_0 = 0$ og $z_{n+1} = z_n^2 + c$.</p>
+      <h3>Kalkulator</h3>
       <div class="mathnotepad-embed" data-contents="N4IgzgLghhCmIC5RlgG1gYwgSwPYDtFRt8ATWAD0QAYAacaAJwhvtjJoF96wNHdUqACq4ADlzYVRjWGDB58YRAG1QANyioArvAQgQ9ALaxoRTt3WadifUZNQznALr01sRvIKIAzPS2jSGFhSGwAmalDQgFpqAEYo2OohWIBOBDj0gA4AOgB2WIAWAC0QTiA%3D"></div>
-
-
-
-
-
+      <p>Her kan du eksperimentere med det du har lært, blant annet negative logaritmen. Du kan for eksempel prøve log(-1)</p>
+      </div>
     </div>
   </div>
 
