--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
        <a href="Komplekse.html">Komplekse tall</a>
        <a href="taylor.html">Taylorrekker</a>
        <a href="memes.html">Memes</a>
-       <a href="#" class="icon" onclick="myFunction()">
+       <a class="icon" onclick="myFunction()">
        <i class="fa fa-bars"></i>
      </a>
      </div>
