--- a/memes.html
+++ b/memes.html
@@ -27,22 +27,22 @@
  </a>
  </div>
   <!-- Slideshow container -->
-<div class="slideshow-container">
+<div class="memes">
 
     <!-- Full-width images with number and caption text -->
-    <div class="mySlides fade">
+    <div class="meme">
       <img src="./Bilder/IMG_2932.png" style="width:100%">
     </div>
 
-    <div class="mySlides fade">
+    <div class="meme">
       <img src="./Bilder/Fermat.png" style="width:100%">
     </div>
 
-    <div class="mySlides fade">
+    <div class="meme">
       <img src="./Bilder/Ramanujan.png" style="width:100%">
     </div>
 
-    <div class="mySlides fade">
+    <div class="meme">
         <img src="./Bilder/Lhop.png" style="width:100%">
       </div>
 
