--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
   html, body {
     height: 100%;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background-color: cornflowerblue;
   }
   #hoved {
     background-image: url("./Bilder/einstein.jpeg");
@@ -29,6 +28,7 @@
   }
   #tekst1{
     position: center;
+    text-align: center;
   }
 </style>
 </head>
@@ -48,12 +48,9 @@
      </a>
      </div>
     <div id="hoved">
-      <h3>Har du alltid ønsket å lære deg om hvorfor 1 + 1 = 2 er sant, om det virkelig eksisterer en negativ kvadratrot eller logaritme, rekker for kjente trig-identiteter, effektive måter å angripe grenseverdier eller rett og slett ønsker å imponere læreren? Da har du kommet til riktig sted!!</h3>
+      <br>
+      <h1 id="tekst1">Har du alltid ønsket å lære deg om hvorfor 1 + 1 = 2 er sant, om det virkelig eksisterer en negativ kvadratrot eller logaritme, rekker for kjente trig-identiteter eller rett og slett ønsker å imponere læreren? Da har du kommet til riktig sted!</h1>
     </div>
-    <div id="tekst1">
-    <h3>Har du alltid ønsket å lære deg om hvorfor 1 + 1 = 2 er sant, om det virkelig eksisterer en negativ kvadratrot eller logaritme, rekker for kjente trig-identiteter, effektive måter å angripe grenseverdier eller rett og slett ønsker å imponere læreren? Da har du kommet til riktig sted!!</h3>
-    </div>
-    <div>_</div>
     <!-- Infobar -->
     <div class="infobar">
     <a href="https://github.com/Danajax" class="github" target="_blank"><i class="fa fa-github"></i></a>
