--- a/Principia.html
+++ b/Principia.html
@@ -27,7 +27,7 @@
  </div>
     <div class="main">
       <div class="overskrift">
-      <h3>Har du noen gang utfordret matematikkens mest fundamentale prinsipp? Hvordan har man kommet frem til at $1+1=2$? Gjennom sunn fornuft kan vi jo forestille oss at dette er sant. Forestill deg at du har $1$ eple og din venn har $1$ eple, da er det naturlig at dere til sammen har $2$ epler, og slik fortsetter det med alle naturlige tall. Men hva om jeg forteller deg at $1+1 = 1$ også er sant, kanskje dette vekker din interesse?</h3>
+      <h3>Har du noen gang utfordret matematikkens mest fundamentale prinsipp? Hvordan har man kommet frem til at $1+1=2$? Gjennom sunn fornuft kan vi jo forestille oss at dette er sant. Forestill deg at du har $1$ eple og din venn har $1$ eple, da er det naturlig at dere til sammen har $2$ epler, og slik fortsetter det med alle naturlige tall.</h3>
       </div>
   <div id="informasjon1">
       <div><h3>Hva er Principia Mathematica?</h3>
