--- a/Taylor.html
+++ b/Taylor.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="no">
 <head>
-<title>Mathedemo</title>
+<title>Taylorrekker</title>
 <!-- LATEX import -->
     <script type="text/x-mathjax-config">
     MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
