--- a/memes.html
+++ b/memes.html
@@ -44,6 +44,10 @@
     <div class="meme">
         <img src="./Bilder/Lhop.png" style="width:100%">
       </div>
+    <div class="meme">
+        <img src="./Bilder/1:12dollar.png" style="width:100%">
+    </div>
+
 
   </div>
   <br>
