--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
      <div class="navbar" id="topnav">
        <a class="aktivside" href="index.html">Hjem</a>
        <a href="principia.html">Principia Mathematica</a>
-       <a href="Komplekse.html">Komplekse tall</a>
+       <a href="komplekse.html">Komplekse tall</a>
        <a href="taylor.html">Taylorrekker</a>
        <a href="memes.html">Memes</a>
        <a class="icon" onclick="myFunction()">
