--- a/memes.html
+++ b/memes.html
@@ -2,6 +2,7 @@
 <html lang="no">
 <head>
 <title>Memes</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!-- LATEX import -->
     <script type="text/x-mathjax-config">
     MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
