--- a/memes.html
+++ b/memes.html
@@ -3,6 +3,7 @@
 <head>
 <title>Memes</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="utf-8">
 <!-- LATEX import -->
     <script type="text/x-mathjax-config">
     MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
@@ -31,22 +32,22 @@
 
     <!-- Full-width images with number and caption text -->
     <div class="meme">
-      <img src="./Bilder/IMG_2932.png" style="width:100%">
+      <img src="./Bilder/IMG_2932.png" style="width:100%" alt="meme1">
     </div>
 
     <div class="meme">
-      <img src="./Bilder/Fermat.png" style="width:100%">
+      <img src="./Bilder/Fermat.png" style="width:100%" alt="meme2">
     </div>
 
     <div class="meme">
-      <img src="./Bilder/Ramanujan.png" style="width:100%">
+      <img src="./Bilder/Ramanujan.png" style="width:100%" alt="meme3">
     </div>
 
     <div class="meme">
-        <img src="./Bilder/Lhop.png" style="width:100%">
+        <img src="./Bilder/Lhop.png" style="width:100%" alt="meme4">
       </div>
     <div class="meme">
-        <img src="./Bilder/1:12dollar.png" style="width:100%">
+        <img src="./Bilder/1:12dollar.png" style="width:100%" alt="meme5">
     </div>
 
 
