--- a/principia.html
+++ b/principia.html
@@ -3,6 +3,7 @@
 <head>
 <title>Principia</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="utf-8">
 <!-- LATEX import -->
     <script type="text/x-mathjax-config">
     MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
